welcome.lessons.welcome.loopdowhile.Poucet1.scala.error
Poucet:5: error: illegal start of simple pattern
  for (compt(<-1 to 5)){
             ^Poucet:18: error: ')' expected but '}' found.
} 
^